# imageset-generator

./: # Code Citations.md  .containerignore  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CI_DOCUMENTATION.md  CODE-SMELL-ANALYSIS-RESOLUTION.md  CODERABBIT-FIXES.md  CODERABBIT-FULL-REVIEW.md  Containerfile  DETAILED-TODO.md  DYNAMIC_CHANNELS_INTEGRATION.md  LOADING_SPINNER_IMPLEMENTATION.md  MANIFEST.in  OC_MIRROR_INTEGRATION.md  PATTERNFLY_UI_IMPLEMENTATION.md  PODMAN_GUIDE.md  README.md  UI_OCP_RELEASES_INTEGRATION.md  WEB_INTERFACE.md  add_functions.py  app.py  constants.py  exceptions.py  generator.py  gui.py  imageset-config.yaml  launcher.py  notes  podman-compose.yml  pyproject.toml  refresh_function.py  requirements.txt  start-dev.sh  start-podman-dev.sh  start-podman.sh  start-web.sh  startup.sh  test-imageset.yaml  (+10 more)
.clavix/: config.json
.github/: dependabot.yml
automation/: QUICKSTART.md  README.md  requirements.txt
data/: catalogs-4.12.json  catalogs-4.13.json  catalogs-4.14.json  catalogs-4.15.json  catalogs-4.16.json  catalogs-4.17.json  catalogs-4.18.json  catalogs-4.6.json  channel-releases.json  ocp-channels.json  ocp-versions.json  operators-certified-operator-index-4.19.json  operators-community-operator-index-4.16.json  operators-community-operator-index-4.17.json  operators-community-operator-index-4.19.json  operators-redhat-4.17.json  operators-redhat-4.18.json  operators-redhat-marketplace-index-4.20.json  operators-redhat-operator-index-4.17.json  operators-redhat-operator-index-4.18-data.json  (+12 more)
docs/: DETAILED-TODO.md
(+142 files in other folders)
