[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageset-generator"
version = "1.0.0"
description = "Generate oc-mirror ImageSetConfiguration YAML files for OpenShift disconnected installations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "packaging>=25.0",
    "requests>=2.32.5",
    "apscheduler>=3.10.0",
    "kubernetes>=28.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
