[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageset-generator"
version = "1.0.0"
description = "Generate oc-mirror ImageSetConfiguration YAML files for OpenShift disconnected installations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "packaging>=25.0",
    "requests>=2.32.5",
    "apscheduler>=3.10.0",
    "kubernetes>=28.1.0",
]

[project.scripts]
imageset-generator = "imageset_generator.cli.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imageset_generator = [
    "frontend/build/*",
    "frontend/build/**/*",
    "data/*.json",
    "automation/config.yaml",
]
